host-setup/etc/iptables/rules.v6
*filter
-P INPUT DROP
-P FORWARD DROP
-P OUTPUT ACCEPT


# Things we want to forbid outright

## We don't use eths 1 through 3
-A INPUT -i eth1 -j DROP
-A INPUT -i eth2 -j DROP
-A INPUT -i eth3 -j DROP

## Ban salt in/out of the outside world completely.
-A OUTPUT  -o eth0 -p tcp --dport 4505:4506 -j REJECT
-A FORWARD -o eth0 -p tcp --dport 4505:4506 -j REJECT
-A FORWARD -i eth0 -p tcp --dport 4505:4506 -j REJECT

## Do no forwarding for random other hosts
-A FORWARD -i eth0 -o eth0 -j DROP

## Ban email out for everyone but the support box
-N log-and-reject-smtp
-A log-and-reject-smtp -m limit --limit 1/sec -j LOG --log-prefix "iptables log-and-reject-smtp " --log-uid
-A log-and-reject-smtp -j REJECT

-A OUTPUT  -o eth0 -p tcp --dport 25 -j log-and-reject-smtp
-A FORWARD -o eth0 -p tcp --dport 25 ! -s 2a02:710:1000:700:5054:1ff:fe00:74 -j log-and-reject-smtp

## Localhost stuff
-A INPUT -i lo -j ACCEPT
-A INPUT ! -i lo -s ::1 -j DROP
-A INPUT ! -i lo -d ::1 -j DROP


# Things we want to permit

## Always allow Ping, SSH and established connections
-A INPUT -p icmpv6 --icmpv6-type echo-request -j ACCEPT
-A INPUT -p icmpv6 --icmpv6-type echo-reply -j ACCEPT
-A INPUT -p icmpv6 --icmpv6-type destination-unreachable -j ACCEPT
-A INPUT -p icmpv6 --icmpv6-type packet-too-big -j ACCEPT
-A INPUT -p icmpv6 --icmpv6-type time-exceeded -j ACCEPT
-A INPUT -p icmpv6 --icmpv6-type parameter-problem -j ACCEPT
-A INPUT -p icmpv6 --icmpv6-type neighbor-solicitation -m hl --hl-eq 255 -j ACCEPT
-A INPUT -p icmpv6 --icmpv6-type neighbor-advertisement -m hl --hl-eq 255 -j ACCEPT
-A INPUT -p icmpv6 -j DROP
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p tcp --dport 22 -m state --state NEW -j ACCEPT

-A FORWARD -p icmpv6 --icmpv6-type echo-request -j ACCEPT
-A FORWARD -p icmpv6 --icmpv6-type echo-reply -j ACCEPT
-A FORWARD -p icmpv6 --icmpv6-type destination-unreachable -j ACCEPT
-A FORWARD -p icmpv6 --icmpv6-type packet-too-big -j ACCEPT
-A FORWARD -p icmpv6 --icmpv6-type time-exceeded -j ACCEPT
-A FORWARD -p icmpv6 --icmpv6-type parameter-problem -j ACCEPT
-A FORWARD -p icmpv6 --icmpv6-type neighbor-solicitation -m hl --hl-eq 255 -j ACCEPT
-A FORWARD -p icmpv6 --icmpv6-type neighbor-advertisement -m hl --hl-eq 255 -j ACCEPT
-A FORWARD -p icmpv6 -j DROP
-A FORWARD -m state --state ESTABLISHED,RELATED -j ACCEPT
-A FORWARD -p tcp --dport 22 -m state --state NEW -j ACCEPT

## The host is a DNS, NTP and DHCP server to VMs
-A INPUT ! -i eth0 -p tcp --dport 53  -m state --state NEW -j ACCEPT
-A INPUT ! -i eth0 -p udp --dport 53  -j ACCEPT
-A INPUT ! -i eth0 -p udp --dport 123 -j ACCEPT
-A INPUT ! -i eth0 -p udp --dport 67  -j ACCEPT

## VMs can make connections to the internet
-A FORWARD ! -i eth0 -o eth0 -p tcp -m state --state NEW -j ACCEPT

## VMs can make arbitrary connections to each other
-A FORWARD ! -i eth0 ! -o eth0 -j ACCEPT

## The internet can connect to HTTP(S) on any VM
-A FORWARD -i eth0 ! -o eth0 -p tcp --dport 80  -m state --state NEW -j ACCEPT
-A FORWARD -i eth0 ! -o eth0 -p tcp --dport 443 -m state --state NEW -j ACCEPT


# Everything else is forbidden (by policy, but REJECTs are kinder)

-A INPUT -j REJECT
-A FORWARD -j REJECT

COMMIT
